package com.urise.webapp.model;

public interface ProfessionalSkill {
   String getText();
}
