@startuml
'https://plantuml.com/class-diagram

Resume *-- PersonInf
Resume *-- Contacts
Resume *--BaseInf
Resume *--ProfessionalSkill
ProfessionalSkill<--Certification
ProfessionalSkill<--TechExperience
ProfessionalSkill <-- BaseInf
TechExperience o--ExperienceEducationInf
class Resume{
 EnumMap <Contacts,BaseInf> contacts
 EnumMap <PersonInf,ProfessionalSkill> info
}
interface ProfessionalSkill{
 getText()
}

class BaseInf{
 String title
 String Text
}

class Certification{
 String title
 List<String> detail
}

class TechExperience{
 String title
 Map<String,ExperienceEducationInf>
}

class ExperienceEducationInf{
   String Company
   LocalDate startTime
   LocalDate endTime
   String TechnologyNameVersion
}

enum PersonInf {
     String title
     PERSONAL();
     OBJECTIVE();
     ACHIEVEMENT();
     QUALIFICATIONS();
     EXPERIENCE();
     EDUCATION();
}

enum Contacts {
     String title
     PHONE()
     SKYPE()
     EMAIL()
     LINKEDIN()
     GITHUB()
     STACKOVERFLOW()
}


@enduml